enabled incubator features