@@ -27,4 +27,42 @@
 
 	</dependencies>
 
+	<build>
+		<plugins>
+			<!-- This maven-compiler-plugin configuration enables the preview-mode for the preview features
+			and the incubator packages for new incubator features. -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
+				<configuration>
+					<compilerArgs>
+						<arg>--enable-preview</arg>
+						<arg>--add-modules</arg>
+						<arg>jdk.incubator.vector</arg>
+					</compilerArgs>
+					<verbose>true</verbose>
+					<fork>true</fork>
+					<showDeprecation>true</showDeprecation>
+					<failOnError>true</failOnError>
+					<showWarnings>true</showWarnings>
+					<showDeprecation>true</showDeprecation>
+				</configuration>
+			</plugin>
+
+			<!-- This maven-surefire-plugin configuration enables the preview-mode for the preview features -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.22.2</version>
+				<configuration>
+					<includes>
+						<include>**/*Test.java</include>
+					</includes>
+					<reuseForks>true</reuseForks>
+					<argLine>--enable-preview</argLine>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
